--- a/despachos.html
+++ b/despachos.html
@@ -146,34 +146,24 @@
         <div class="text-center">
             <div id="porcentajes" class="d-flex flex-column flex-md-row justify-content-center align-items-center p-2">
                 <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="andreaniPorcentaje">
-                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status">
-                        <span class="visually-hidden"></span>
-                    </div>
-                    <span class="ml-1">Calculando Andreani... <span id="andreaniValue"></span></span>
+                    <img src="./Img/loading-buffering.gif" alt="Spinner">
+                    <span class="ml-1">Calculando... <span id="andreaniValue"></span></span>
                 </span>
                 <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="andesmarPorcentaje">
-                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status">
-                        <span class="visually-hidden"></span>
-                    </div>
-                    <span class="ml-1">Calculando Andesmar... <span id="andesmarValue"></span></span>
+                    <img src="./Img/loading-buffering.gif" alt="Spinner">
+                    <span class="ml-1">Calculando... <span id="andesmarValue"></span></span>
                 </span>
                 <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="cruzDelSurPorcentaje">
-                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status">
-                        <span class="visually-hidden"></span>
-                    </div>
-                    <span class="ml-1">Calculando Cruz del Sur... <span id="cruzDelSurValue"></span></span>
+                    <img src="./Img/loading-buffering.gif" alt="Spinner">
+                    <span class="ml-1">Calculando... <span id="cruzDelSurValue"></span></span>
                 </span>
                 <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="ocaPorcentaje">
-                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status">
-                        <span class="visually-hidden"></span>
-                    </div>
-                    <span class="ml-1">Calculando Logistica OCA... <span id="ocaValue"></span></span>
+                    <img src="./Img/loading-buffering.gif" alt="Spinner">
+                    <span class="ml-1">Calculando... <span id="ocaValue"></span></span>
                 </span>
                 <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="placeItPorcentaje">
-                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status">
-                        <span class="visually-hidden"></span>
-                    </div>
-                    <span class="ml-1">Calculando PlaceIt... <span id="placeItValue"></span></span>
+                    <img src="./Img/loading-buffering.gif" alt="Spinner">
+                    <span class="ml-1">Calculando... <span id="placeItValue"></span></span>
                 </span>
                 <span class="macos-button-porcentaje" id="SinDespacharPorcentaje">
                     <i class="bi bi-calculator" style="font-size: 20px;"></i> Calculando en preparación...
