--- a/MeliArPlaceit.html
+++ b/MeliArPlaceit.html
@@ -101,7 +101,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto" id="navbarNavUl">
-                    <li class="nav-item"><a href="./meliAr.html" class="nav-link active"><img id="meli-logo2" src="./Img/meli.png">Etiquetas MeLi</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link active"><img id="meli-logo2" src="./Img/meli.png">Etiquetas MeLi</a></li>
+                    <li class="nav-item"><a href="./bnaPlaceIt.html" class="nav-link">Etiquetas Tiendas Virtuales</a></li>
                 </ul>
             </div>
         </div>
