--- a/envios.html
+++ b/envios.html
@@ -91,6 +91,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="./MeliArPlaceit.html">Envios Meli PlaceIt</a>
+                            <a class="dropdown-item" href="./bnaPlaceIt.html">Envios Tiendas V. PlaceIt</a>
                         </div>
                     </li>
                 </ul>
@@ -106,7 +107,7 @@
                     <input type="text" class="form-control" id="search" placeholder="Buscar por nombre, dirección, remito...">
                     <div class="input-group-append">
                         <button class="btn btn-outline-secondary" type="button">
-                            <i class="fas fa-search"></i>
+                            <i class="fas fa-search" style="font-size: 22px"></i>
                         </button>
                     </div>
                 </div>
@@ -117,7 +118,7 @@
                     <option value="nuevo" selected>Más nuevos</option>
                     <option value="antiguo">Más antiguos</option>
                 </select>
-                <button class="btn btn-secondary simbel" id="filter-labels">Etiquetas <img id="simbel" src="./Img/simbel.png"></button>
+                <button class="btn btn-dark simbel" id="filter-labels" style="height: 45px">Etiquetas <img id="simbel" src="./Img/simbel.png"></button>
             </div>
         </div>
     </div>
