--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="./MeliArPlaceit.html">Envios Meli PlaceIt</a>
+                        <a class="dropdown-item" href="./bnaPlaceIt.html">Envios Tiendas V. PlaceIt</a>
                     </div>
                 </li>
             </ul>
