--- a/bna.html
+++ b/bna.html
@@ -93,8 +93,8 @@
                 <div class="input-group">
                     <input type="text" class="form-control" id="searchBna" placeholder="Buscar por nombre, dirección, remito...">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="button">
-                            <i class="fas fa-search" style="font-size: 22px"></i>
+                        <button class="btn-search-bna btn btn-outline-secondary" type="button">
+                            <i class="fas fa-search" style="font-size: 22px;"></i>
                         </button>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                         </button>
                         
                         <button id="btnPreparar" type="button" class="btn btn-light position-relative" style="white-space: nowrap;">
-                            <i class="bi bi-box-seam-fill" style="font-size: 22px; color: #f39c12;"></i> Preparar
+                            <i class="bi bi-box2" style="font-size: 22px; color: #f39c12;"></i> Preparar
                             <span id="contadorCards" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger badge-large">
                                 <i class="fas fa-spinner fa-spin"></i>
                                 <span class="visually-hidden"></span>
