--- a/logipaq.html
+++ b/logipaq.html
@@ -20,7 +20,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(183deg, rgba(255,102,102,1) 0%, rgba(139,0,0,1) 100%);
+            background-image: url('./Img/inspiration-geometry.png'), linear-gradient(180deg, #1e3a8a, #1e40af, #3b82f6, #60a5fa);
         }
         .login-container {
             background-color: white;
