--- a/despachos.html
+++ b/despachos.html
@@ -123,7 +123,7 @@
                         <i class="bi bi-camera-fill" style="font-size: 22px; color: #3498db;"></i> Remitos
                     </button>
                     <button class="btn btn-light ml-2" id="promedioBtn" title="Promedio Despacho: Xd Yh Zm">
-                        <i class="bi bi-calculator" style="font-size: 22px; color: #e67e22;"></i> Calculando Promedio...
+                        <i class="bi bi-calculator"></i> Calculando Promedio...
                     </button>
                 </div>                                                           
             </div>  
