--- a/bnaPlaceIt.html
+++ b/bnaPlaceIt.html
@@ -103,8 +103,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto" id="navbarNavUl">
-                    <li class="nav-item"><a href="./MeliArPlaceit.html" class="nav-link"><img id="meli-logo2" src="./Img/meli.png">Etiquetas MeLi</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link active">Etiquetas Tiendas Virtuales</a></li>
+                    <li class="nav-item"><a href="./MeliArPlaceit.html" class="nav-link"><img id="meli-logo2" src="./Img/meli.png">Mercado Libre</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Tiendas Virtuales</a></li>
+                    <li class="nav-item"><a href="./simbel.html" class="nav-link active">Ventas Web</a></li>
                 </ul>
             </div>
         </div>
