--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -91,9 +91,10 @@
                             Más
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./MeliArPlaceit.html">Envios Meli PlaceIt</a>
-                            <a class="dropdown-item" href="./bnaPlaceIt.html">Envios Tiendas V. PlaceIt</a>
-                        </div>
+                            <a class="dropdown-item" href="./MeliArPlaceit.html">Mercado Libre PlaceIt</a>
+                            <a class="dropdown-item" href="./bnaPlaceIt.html">Tiendas Virtuales PlaceIt</a>
+                            <a class="dropdown-item" href="./simbel.html">Venta Web PlaceIt</a>
+                            <a class="dropdown-item" href="./catalogo.html">Catalogo de Productos</a>                        </div>
                     </li>
                 </ul>
             </div>
