--- a/despachos.html
+++ b/despachos.html
@@ -167,7 +167,8 @@
                 </span>
             </div> 
         </div>   
-        <div class="estadisticas-header"><i class="bi bi-info-circle-fill"></i> Estadísticas de los últimos 30 días</div>                                  
+        
+        <div id="estadisticas-header" class="estadisticas-header"><i class="bi bi-info-circle-fill"></i> Estadísticas de los últimos 30 días</div>                                  
 
 <div class="table-responsive">
     <table id="data-table" class="table table-striped">
