--- a/panelPlaceIt.html
+++ b/panelPlaceIt.html
@@ -162,7 +162,7 @@
 
                 </div>
 
-                <p class="estadisticas-1"><i class="bi bi-clipboard2-pulse-fill ml-1"></i> Estadisticas Pre-Entrega</p>
+                <p id="estadisticas-1" class="estadisticas-1"><i class="bi bi-clipboard2-pulse-fill ml-1"></i> Estadisticas Pre-Entrega</p>
             </div>
 
 
@@ -181,10 +181,10 @@
 
                 <span class="macos-button-porcentaje" id="SinDespacharPorcentaje">
                     <i class="bi bi-calculator" style="font-size: 20px;"></i> Calculando en preparación...
-                </span>
+                </span> 
 
                 </div>
-                <p class="estadisticas-2"><i class="bi bi-clipboard2-pulse-fill ml-1"></i> Eficacia de entrega</p>
+                <p id="estadisticas-2" class="estadisticas-2"><i class="bi bi-clipboard2-pulse-fill ml-1"></i> Eficacia de entrega</p>
             </div> 
         </div>
         </div>   
