--- a/panelPlaceIt.html
+++ b/panelPlaceIt.html
@@ -123,7 +123,7 @@
                     <button class="btn btn-light" id="scanRemitoBtn" data-toggle="modal" data-target="#scanRemitoModal">
                         <i class="bi bi-camera-fill" style="font-size: 22px; color: #3498db;"></i> Remitos
                     </button>
-                    <button class="btn btn-light ml-2" id="promedioBtn" title="Promedio Despacho: Xd Yh Zm">
+                    <button class="btn btn-light ml-2 hidden" id="promedioBtn" title="Promedio Despacho: Xd Yh Zm">
                         <i class="bi bi-calculator"></i> Calculando Promedio...
                     </button>
                 </div>                                                           
@@ -136,7 +136,7 @@
         <div class="spinner-border spinner-border37892" role="status" id="spinner">
             <img src="./Img/Novogar N.png" alt="Imagen" class="spinner-image">
             <span class="sr-only">Cargando...</span>
-        </div>
+        </div> 
 
         <div id="search-despachos" class="search-despachos"></div>      
         
@@ -178,10 +178,6 @@
                     <img src="./Img/loading-buffering.gif" alt="Spinner">
                     <span class="ml-1">Calculando... <span id="placeItValue"></span></span>
                 </span>
-
-                <span class="macos-button-porcentaje" id="SinDespacharPorcentaje">
-                    <i class="bi bi-calculator" style="font-size: 20px;"></i> Calculando en preparación...
-                </span> 
 
                 </div>
                 <p id="estadisticas-2" class="estadisticas-2"><i class="bi bi-clipboard2-pulse-fill ml-1"></i> Eficacia de entrega</p>
