--- a/simbel.html
+++ b/simbel.html
@@ -113,6 +113,7 @@
                     <li class="nav-item"><a href="./MeliArPlaceit.html" class="nav-link"><img id="meli-logo2" src="./Img/meli.png">Mercado Libre</a></li>
                     <li class="nav-item"><a href="./bnaPlaceIt.html" class="nav-link">Tiendas Virtuales</a></li>
                     <li class="nav-item"><a href="#" class="nav-link active">Ventas Web</a></li>
+                    <li class="nav-item"><a href="./panelPlaceIt.html" class="nav-link"><i class="bi bi-gear-fill mr-1"></i>Panel PlaceIt</a></li>
                 </ul>
             </div>
         </div>
