--- a/despachos.html
+++ b/despachos.html
@@ -77,6 +77,7 @@
                             <a class="dropdown-item" href="./MeliArPlaceit.html">Mercado Libre PlaceIt</a>
                             <a class="dropdown-item" href="./bnaPlaceIt.html">Tiendas Virtuales PlaceIt</a>
                             <a class="dropdown-item" href="./simbel.html">Venta Web PlaceIt</a>
+                            <a class="dropdown-item" href="./simbel.html"><i class="bi bi-gear-fill mr-1"></i>Panel PlaceIt</a>
                             <a class="dropdown-item" href="./catalogo.html">Catalogo de Productos</a>                        </div>
                     </li>
                 </ul>
