--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
                         <a class="dropdown-item" href="./MeliArPlaceit.html">Mercado Libre PlaceIt</a>
                         <a class="dropdown-item" href="./bnaPlaceIt.html">Tiendas Virtuales PlaceIt</a>
                         <a class="dropdown-item" href="./simbel.html">Venta Web PlaceIt</a>
-                        <a class="dropdown-item" href="./simbel.html"><i class="bi bi-gear-fill mr-1"></i>Panel PlaceIt</a>
-                        <a class="dropdown-item" href="./catalogo.html">Catalogo de Productos</a>                        </div>
-                </div>
+                        <a class="dropdown-item" href="./panelPlaceIt.html"><i class="bi bi-gear-fill mr-1"></i>Panel PlaceIt</a>
+                        <a class="dropdown-item" href="./catalogo.html">Catalogo de Productos</a>                </div>
                 </li>
             </ul>
         </div>
