--- a/despachos.html
+++ b/despachos.html
@@ -408,6 +408,30 @@
 </div>
 <!-- Fin Modal Comentario -->
 
+<!-- Modal Línea de Tiempo -->
+<div class="modal fade" id="timelineModal" tabindex="-1" aria-labelledby="timelineModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-light text-dark">
+            <div class="modal-header bg-light text-dark">
+                <h5 class="modal-title text-dark" id="timelineModalLabel">Línea de Tiempo PlaceIt</h5>
+            </div>
+            <div class="modal-body">
+                <ul id="timelineContent" class="timeline" style="display: none; list-style: none; padding: 0; margin: 0;">
+                    <!-- Los estados se agregarán dinámicamente aquí -->
+                </ul>
+            </div>
+
+            <div class="modal-footer d-flex justify-content-center">
+                <div class="alert-modal-Pi text-center">
+                    <span>Para cerrar haga click fuera de la ventana</span>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- Fin Modal Línea de Tiempo -->
+
 <!-- Modal Nodos -->
 <div class="modal fade" id="ImprimirNodos" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
