--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -527,6 +527,7 @@
         <!-- Cargar jsPDF -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
         <script src="./js/firebase-init-TV.js"></script>
+        <script src="./js/firebase-init-stock"></script>
         <script src="./js/facturacionMeli.js"></script>
         <script src="./js/features.js"></script>
         
