--- a/envios.html
+++ b/envios.html
@@ -173,7 +173,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="destinatario" class="form-label">Destinatario</label>
-                        <input type="email" class="form-control input-email" id="destinatario" value="genarosuarez@andesmar.com.ar" readonly>
+                        <input type="email" class="form-control input-email" id="destinatario" value="consultasnovogar@andesmar.com.ar" readonly>
                     </div>
                     <div class="mb-3">
                         <label for="origen" class="form-label">Origen</label>
