--- a/bna.html
+++ b/bna.html
@@ -379,6 +379,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="./js/firebase-init.js"></script>
     <script src="./js/firebase-init-stock"></script>
+    <script src="./js/firebase-init-Meli.js"></script>
     <script src="./js/bnaCards.js"></script>
     <script src="./js/features.js"></script>
     <script src="./js/ciudades.js"></script>
