--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -32,6 +32,15 @@
         #data-table td:nth-last-child(-n+3){
             padding: 10px; 
         }
+
+        /* Estilo específico para esta página */
+        .search-container-top {
+            max-width: 85%; /* Aumentar ancho del contenedor de búsqueda */
+        }
+        
+        #cards-container {
+            max-width: 85%; /* Aumentar ancho del contenedor de tarjetas */
+        }
     </style>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -102,7 +111,7 @@
         </div>
     </nav>
 
-    <div class="container mt-4">
+    <div class="container mt-4 search-container-top">
         <div class="row justify-content-between align-items-center search-filter-container">
             <div class="col-md-6 mb-3">
                 <div class="input-group">
