--- a/controlMeli.html
+++ b/controlMeli.html
@@ -96,7 +96,7 @@
         </div>
     </nav>
 
-    <div class="container mt-4">
+    <div class="container mt-4 search-container-top">
         <div class="row justify-content-between align-items-center search-filter-container">
             <div class="col-md-6 mb-3">
                 <!-- Buscador -->
