--- a/panelPlaceIt.html
+++ b/panelPlaceIt.html
@@ -37,6 +37,15 @@
                 transform: translateX(0);
             }
         }
+
+        /* Estilo específico para esta página */
+        .search-container-top {
+            max-width: 85%; /* Aumentar ancho del contenedor de búsqueda */
+        }
+        
+        #cards-container {
+            max-width: 85%; /* Aumentar ancho del contenedor de tarjetas */
+        }
     </style>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -112,7 +121,7 @@
         </div>
     </nav>
 
-    <div class="container mt-4">
+    <div class="container mt-4 search-container-top">
         <div class="row justify-content-between align-items-center search-filter-container">
             <div class="col-md-6 mb-3">
                 <div class="input-group">
