--- a/posventa.html
+++ b/posventa.html
@@ -32,11 +32,11 @@
         
         /* Estilo específico para esta página */
         .search-container-top {
-            max-width: 85%; /* Aumentar ancho del contenedor de búsqueda */
+            max-width: 85% !important; /* Aumentar ancho del contenedor de búsqueda */
         }
 
         #cards-container {
-            max-width: 85%; /* Aumentar ancho del contenedor de tarjetas */
+            max-width: 85% !important; /* Aumentar ancho del contenedor de tarjetas */
         }
 
         /* Media query para pantallas de 950px o menos */
