--- a/posventa.html
+++ b/posventa.html
@@ -393,6 +393,7 @@
         });
     </script>
     
+    <!-- Avatar -->
     <script>
         function selectAvatar(imgFileName, altText) {
             const imgPath = `./Img/${imgFileName}`;
@@ -419,7 +420,8 @@
                 activeAvatar.alt = "Avatar-selected";
             }
         });
-    </script>    
+    </script>
+    <!-- Avatar -->    
 
     <!-- Footer -->
     <footer class="center">
