--- a/posventa.html
+++ b/posventa.html
@@ -147,6 +147,14 @@
                 <button id="btnSkills" class="btn btn-light" data-toggle="modal" data-target="#skillsModal">
                     <i class="bi bi-bookmarks-fill" style="font-size: 22px; color: #007bff;"></i> Skills
                 </button>
+
+                <button class="btn btn-light ml-2" id="sinRevisar" title="Promedio Despacho: Xd Yh Zm">
+                    <i class="bi bi-calculator"></i> Calculando sin Revisar...
+                </button>
+
+                <button class="btn btn-light ml-2" id="promedioBtn" title="Promedio Despacho: Xd Yh Zm">
+                    <i class="bi bi-calculator"></i> Contando Filas...
+                </button>
             </div>            
         </div>
     </div>
