--- a/posventa.html
+++ b/posventa.html
@@ -148,9 +148,9 @@
                     <i class="bi bi-bookmarks-fill" style="font-size: 22px; color: #007bff;"></i> Skills
                 </button>
 
-                <button class="btn btn-light ml-2" id="sinRevisar" title="Promedio Despacho: Xd Yh Zm">
+                <button class="btn btn-light ml-2" id="sinRevisar" title="Promedio Despacho: Xd Yh Zm" onclick="contarFilasSinControlDesdeDOM()">
                     <i class="bi bi-calculator"></i> Calculando sin Revisar...
-                </button>
+                </button>                
 
                 <button class="btn btn-light ml-2" id="promedioBtn" title="Promedio Despacho: Xd Yh Zm">
                     <i class="bi bi-calculator"></i> Contando Filas...
