--- a/posventa.html
+++ b/posventa.html
@@ -334,7 +334,7 @@
                     <button id="addSkuButtonPlaceIt" class="btn btn-primary">Agregar Skill</button>
                 </div>
         
-                <div class="color-picker-container mb-4">
+                <div class="color-picker-container mb-1">
                     <label class="form-label fw-semibold">🎨 Colores Rápidos:</label>
                     <div class="d-flex flex-wrap gap-2 mb-3">
 
@@ -397,6 +397,9 @@
                     <input type="color" id="colorPicker" value="#007bff" class="custom-color-input">
                     </div>
                 </div>
+
+                <label for="skillDescription" class="form-label fw-semibold">📝 Descripción del skill:</label>
+                <textarea id="skillDescription" class="form-control mb-3" rows="3" placeholder="Escribe la descripción del skill aquí... (Esto servirá para el armado del Martillo)"></textarea>
         
                 <div id="spinner" class="text-center" style="display: none;">
                     <div class="spinner-border text-primary" role="status">
