--- a/posventa.html
+++ b/posventa.html
@@ -317,6 +317,39 @@
             </div>
         </div>
         <!-- Fin Modal de Skills en Filas -->
+
+        <!-- Modal de Comentarios -->
+        <div class="modal fade" id="comentarioModal" tabindex="-1" aria-labelledby="comentarioModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="comentarioModalLabel">Comentarios de la Venta</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <input type="hidden" id="ventaIdInput" />
+                        <div class="mb-3">
+                            <label for="comentarioOperacion" class="form-label">Comentario de la Operación</label>
+                            <textarea id="comentarioOperacion" class="form-control" style="border-radius: 10px !important; min-height: 200px;"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="numeroCaso" class="form-label">Número de Caso</label>
+                            <input type="text" id="numeroCaso" class="form-control" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="vencimientoDevolucion" class="form-label">Vencimiento de Devolución</label>
+                            <input type="date" id="vencimientoDevolucion" class="form-control" />
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary" onclick="guardarComentario()">Guardar Comentario</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Fin Modal de Comentarios -->
+
   
         <!-- Modal de Skills -->
         <div class="modal fade" id="skillsModal" tabindex="-1" role="dialog" aria-labelledby="skillsModalLabel" aria-hidden="true">
