--- a/posventa.html
+++ b/posventa.html
@@ -432,7 +432,7 @@
                 </div>
 
                 <label for="skillDescription" class="form-label fw-semibold">📝 Descripción del skill:</label>
-                <textarea id="skillDescription" class="form-control mb-3" rows="3" placeholder="Escribe la descripción del skill aquí... (Esto servirá para el armado del Martillo)"></textarea>
+                <textarea id="skillDescription" class="form-control mb-3" rows="3" placeholder="Escribe la descripción del skill aquí... (Esto servirá para el armado del Martillo)" style="border-radius: 10px !important;"></textarea>
         
                 <div id="spinner" class="text-center" style="display: none;">
                     <div class="spinner-border text-primary" role="status">
