--- a/posventa.html
+++ b/posventa.html
@@ -795,8 +795,7 @@
     
     <!-- Cargar jsPDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="./js/firebase-init-TV.js"></script>
-    <script src="./js/firebase-init-stock"></script>
+    <script src="./js/firebase-init-Meli.js"></script>
     <script src="./js/firebase-init-cliente.js"></script>
     <script src="./js/features.js"></script>
     <script src="./js/posventa.js"></script>
