--- a/catalogo.html
+++ b/catalogo.html
@@ -76,7 +76,9 @@
                             <a class="dropdown-item" href="./MeliArPlaceit.html">Mercado Libre PlaceIt</a>
                             <a class="dropdown-item" href="./bnaPlaceIt.html">Tiendas Virtuales PlaceIt</a>
                             <a class="dropdown-item" href="./simbel.html">Venta Web PlaceIt</a>
-                            <a class="dropdown-item active" href="./catalogo.html">Catalogo de Productos</a>                        </div>
+                            <a class="dropdown-item active" href="./catalogo.html">Catalogo de Productos</a>
+                            <a class="dropdown-item" href="./posventa.html">Posventa</a> 
+                        </div>
                     </li>
                 </ul>
             </div>
