--- a/bna.html
+++ b/bna.html
@@ -81,7 +81,9 @@
                             <a class="dropdown-item" href="./bnaPlaceIt.html">Tiendas Virtuales PlaceIt</a>
                             <a class="dropdown-item" href="./simbel.html">Venta Web PlaceIt</a>
                             <a class="dropdown-item" href="./panelPlaceIt.html"><i class="bi bi-gear-fill mr-1"></i>Panel PlaceIt</a>
-                            <a class="dropdown-item" href="./catalogo.html">Catalogo de Productos</a>                        </div>
+                            <a class="dropdown-item" href="./catalogo.html">Catalogo de Productos</a>
+                            <a class="dropdown-item" href="./posventa.html">Posventa</a> 
+                        </div>
                     </li>
                 </ul>
             </div>
