--- a/posventa.html
+++ b/posventa.html
@@ -96,7 +96,7 @@
                             MeLi <img id="meli-logo" src="./Img/meli.png">
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item active" href="./facturacionMl.html">Facturacion Mercado libre</a>
+                            <a class="dropdown-item" href="./facturacionMl.html">Facturacion Mercado libre</a>
                             <a class="dropdown-item" href="./meliAr.html">Envios Mercado Libre</a>
                             <a class="dropdown-item" href="./controlMeli.html">Colecta Mercado libre</a>
                         </div>
@@ -110,7 +110,8 @@
                             <a class="dropdown-item" href="./bnaPlaceIt.html">Tiendas Virtuales PlaceIt</a>
                             <a class="dropdown-item" href="./simbel.html">Venta Web PlaceIt</a>
                             <a class="dropdown-item" href="./panelPlaceIt.html"><i class="bi bi-gear-fill mr-1"></i>Panel PlaceIt</a>
-                            <a class="dropdown-item" href="./catalogo.html">Catalogo de Productos</a>                      
+                            <a class="dropdown-item" href="./catalogo.html">Catalogo de Productos</a>  
+                            <a class="dropdown-item active" href="#">Posventa</a>                    
                         </div>
                     </li>
                 </ul>
