--- a/posventa.html
+++ b/posventa.html
@@ -427,7 +427,7 @@
                             <textarea id="comentarioOperacion" class="form-control" style="border-radius: 10px !important; min-height: 200px;"></textarea>
                         </div>
                         <div class="mb-3">
-                            <label for="numeroCaso" class="form-label">Número de Caso</label>
+                            <label for="numeroCaso" class="form-label">Número de Caso MeLi</label>
                             <input type="text" id="numeroCaso" class="form-control" />
                         </div>
                         <div class="mb-3">
