--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -113,6 +113,7 @@
                             <a class="dropdown-item" href="./simbel.html">Venta Web PlaceIt</a>
                             <a class="dropdown-item" href="./panelPlaceIt.html"><i class="bi bi-gear-fill mr-1"></i>Panel PlaceIt</a>
                             <a class="dropdown-item" href="./catalogo.html">Catalogo de Productos</a>
+                            <a class="dropdown-item" href="./jsonSimbel.html">Export Json Simbel</a>
                             <a class="dropdown-item" href="./posventa.html">Posventa</a> 
                         </div>                        
                     </li>
