--- a/catalogo.html
+++ b/catalogo.html
@@ -76,7 +76,9 @@
                             <a class="dropdown-item" href="./MeliArPlaceit.html">Mercado Libre PlaceIt</a>
                             <a class="dropdown-item" href="./bnaPlaceIt.html">Tiendas Virtuales PlaceIt</a>
                             <a class="dropdown-item" href="./simbel.html">Venta Web PlaceIt</a>
+                            <a class="dropdown-item" href="./panelPlaceIt.html"><i class="bi bi-gear-fill mr-1"></i>Panel PlaceIt</a>
                             <a class="dropdown-item active" href="./catalogo.html">Catalogo de Productos</a>
+                            <a class="dropdown-item" href="./jsonSimbel.html">Export Json Simbel</a>
                             <a class="dropdown-item" href="./posventa.html">Posventa</a> 
                         </div>
                     </li>
