--- a/jsonSimbel.html
+++ b/jsonSimbel.html
@@ -216,7 +216,7 @@
 
                 <div class="form-group">
                     <label for="jsonData">JSON a enviar:</label>
-                    <textarea id="jsonData" class="form-control" rows="12" placeholder='{"conf_cliente":{...}}' required></textarea>
+                    <textarea id="jsonData" class="form-control" rows="12" placeholder='{"conf_cliente":{...}}' required style="border-radius: 10px !important;"></textarea>
                 </div>
 
                 <div class="text-center" id="spinner">
