--- a/bna.html
+++ b/bna.html
@@ -291,39 +291,36 @@
 </div> 
 <!-- Fin Modal para Agregar SKU PlaceIt -->
 
-<!-- Modal para Agregar SKU PlaceIt -->
-<div class="modal fade" id="skuPlaceItModal" tabindex="-1" role="dialog" aria-labelledby="skuPlaceItModalLabel" aria-hidden="true">
+<!-- Modal para Agregar SKU -->
+<div class="modal fade" id="skuModal" tabindex="-1" role="dialog" aria-labelledby="skuModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header sku-modal-header">
-                <h5 class="modal-title sku-modal-title" id="skuPlaceItModalLabel">Agregar SKU PlaceIt</h5>
+                <h5 class="modal-title sku-modal-title" id="skuModalLabel">Agregar SKU</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <div style="background-color: #d4edda; color: #155724; padding: 10px; border: 1px solid #c3e6cb; border-radius: 5px; display: flex; align-items: center; margin-bottom: 15px; text-align: center;">
-                    <i class="bi bi-check-circle-fill" style="margin-right: 10px;"></i>
-                    <span>Sincronizado cada 30min con Presea, depósito 40</span>
-                </div>
                 <div class="sku-input-group">
-                    <input type="text" class="form-control sku-input" id="newSkuInputPlaceIt" placeholder="Ingrese el SKU">
-                    <button id="addSkuButtonPlaceIt" class="btn btn-primary">Agregar SKU</button>
+                    <input type="text" class="form-control sku-input" id="newSkuInput" placeholder="Ingrese el SKU">
+                    <button id="addSkuButton" class="btn btn-primary">Agregar SKU</button>
                 </div>
-                <div class="spinner-border sku-spinner" id="loadingSpinnerPlaceIt" role="status" style="display: none;">
+                <div class="spinner-border sku-spinner" id="loadingSpinner" role="status" style="display: none;">
                     <span class="sr-only">Cargando...</span>
                 </div>
 
-                <div id="alertContainerPlaceIt" style="display: none;"></div>
+                <div id="alertContainer" style="display: none;"></div>
 
-                <table class="table table-bordered sku-table">
+                <table class="table table-bordered sku-table sku-table2">
                     <thead>
                         <tr>
                             <th>SKU</th>
+                            <th class="stock-header">Stock</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="skuPlaceItListBody">
+                    <tbody id="skuListBody">
                         <!-- Los SKU se cargarán aquí -->
                     </tbody>
                 </table>
@@ -331,7 +328,7 @@
         </div>
     </div>
 </div> 
-<!-- Fin Modal para Agregar SKU PlaceIt -->
+<!-- Fin Modal para Agregar SKU -->
 
      <!-- Botón de flecha hacia arriba -->
      <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
