--- a/despachos.html
+++ b/despachos.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+
+    <script>
+        const userType = localStorage.getItem('userType');
+        if (userType === 'placeit') {
+          localStorage.setItem('accessDenied', 'true');
+          window.location.replace('MeliArPlaceit.html');
+        } else {
+          const savedTimestamp = localStorage.getItem('loginTimestamp');
+          const isExpired = !savedTimestamp || (Date.now() - savedTimestamp) > 28800000;
+          if (isExpired) {
+            window.location.replace('logipaq.html');
+          }
+        }
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envios</title>
@@ -36,29 +51,6 @@
             }
         }
     </style>
-    <script>
-        // Verificación de acceso antes de cargar el contenido de la página
-        const userType = localStorage.getItem('userType');
-        if (userType === 'placeit') {
-            localStorage.setItem('accessDenied', 'true');
-            window.location.href = 'MeliArPlaceit.html';
-        }
-    </script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            checkLogin();
-        });
-
-        function checkLogin() {
-            const savedTimestamp = localStorage.getItem('loginTimestamp');
-            const isExpired = !savedTimestamp || (Date.now() - savedTimestamp) > 28800000;
-
-            if (isExpired) {
-                window.location.href = 'logipaq.html'; 
-            }
-        }
-</script>
 </head>
 
 <body class="envios-body"> <strong></strong>
