--- a/envios.html
+++ b/envios.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+
+    <script>
+        const userType = localStorage.getItem('userType');
+        if (userType === 'placeit') {
+          localStorage.setItem('accessDenied', 'true');
+          window.location.replace('MeliArPlaceit.html');
+        } else {
+          const savedTimestamp = localStorage.getItem('loginTimestamp');
+          const isExpired = !savedTimestamp || (Date.now() - savedTimestamp) > 28800000;
+          if (isExpired) {
+            window.location.replace('logipaq.html');
+          }
+        }
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envios</title>
@@ -18,44 +33,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script>
-        // Verificación de acceso antes de cargar el contenido de la página
-        const userType = localStorage.getItem('userType');
-        if (userType === 'placeit') {
-            localStorage.setItem('accessDenied', 'true');
-            window.location.href = 'MeliArPlaceit.html';
-        }
-    </script>
-
-    <script>
-    document.addEventListener('DOMContentLoaded', () => {
-        checkLogin();
-    });
-
-    function checkLogin() {
-        const savedTimestamp = localStorage.getItem('loginTimestamp');
-        const isExpired = !savedTimestamp || (Date.now() - savedTimestamp) > 28800000;
-
-        if (isExpired) {
-            window.location.href = 'logipaq.html'; 
-        }
-    }
-</script>
-
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        checkLogin();
-    });
-
-    function checkLogin() {
-        const savedTimestamp = localStorage.getItem('loginTimestamp');
-        const isExpired = !savedTimestamp || (Date.now() - savedTimestamp) > 28800000;
-
-        if (isExpired) {
-            window.location.href = 'logipaq.html'; 
-        }
-    }
-</script>
 </head>
 
 <body class="envios-body">
